fix share page button mobile overflow

--- a/resources/assets/sass/section_share.sass
+++ b/resources/assets/sass/section_share.sass
@@ -9,6 +9,10 @@
     .container
       padding-left: 0
       padding-right: 0
+    .btn_group_inline
+      display: block
+      &>*
+        border: solid 1px black
 
   &:before
     content: ""
